--- a/sitetemplates/base.html
+++ b/sitetemplates/base.html
@@ -12,9 +12,11 @@
 <body>
   <div id="top">
     {% block top %}
-      Some content of the top div ;)
+      <h1>SpaceCombat 2</h1>
+      <h2>Community</h2>
     {% endblock %}
   </div>
+  <div id="subhead">Copyright 2007 &copy; by Herbert Poul</div>
   <div id="leftblah">
     <div id="navigation">
       {% block navigation %}
