ok .. i think i got the vhosts working

--- a/sitetemplates/base.html
+++ b/sitetemplates/base.html
@@ -16,7 +16,7 @@
       <h2>Community</h2>
     {% endblock %}
   </div>
-  <div id="subhead">Copyright 2007 &copy; by Herbert Poul</div>
+  <div id="subhead">Copyright &copy; 2007 by Herbert Poul</div>
   <div id="leftblah">
     <div id="navigation">
       {% block navigation %}
