--- a/sitetemplates/base.html
+++ b/sitetemplates/base.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <link rel="stylesheet" href="/static/style.css" />
-  <title>{% if group and group.longname %}{{ group.longname }}{% else %}GOIM Community{% block title %} - Uh Yeah !{% endblock %}{% endif %}</title>
+  <title>{% if group and group.longname %}{{ group.longname }}{% else %}GOIM Community{% endif %}</title>
   {% block head %}{% endblock %}
   {% include "_head.html" %}
 </head>
@@ -16,7 +16,7 @@
       <h2>Community</h2>
     {% endblock %}
   </div>
-  <div id="subhead">Copyright &copy; 2007 by Herbert Poul</div>
+  <div id="subhead">Copyright &copy; 2007 by <a href="http://hpoul.sphene.net" style="color: #fff; font-weight: bold;">Herbert Poul</a></div>
   <div id="leftblah">
     <div id="navigation">
       {% block navigation %}
@@ -56,6 +56,8 @@
         {{ sph.toc }}
       </div>
     {% endif %}
+    <br/><br/>
+    <a href="http://www.djangoproject.com/"><img src="http://media.djangoproject.com/img/badges/djangosite80x15_grey.gif" border="0" alt="A Django site." title="A Django site." /></a>
   </div>
   <div id="content">
 {% if messages %}
