--- a/sitetemplates/wiki/news.html
+++ b/sitetemplates/wiki/news.html
@@ -4,9 +4,9 @@
   {% for thread in threads %}
     <li>
       <div class="subject">{{ thread.postdate|sph_date }}: {{ thread.subject }}</div>
-      <div class="body">{{ thread.body }}</div>
+      <div class="body">{{ thread.body_escaped }}</div>
       {% if baseURL %}
-        <div class="comments"><a href="{{ baseURL }}/thread/{{ thread.id }}/">Comments</a></div>
+        <div class="comments"><a href="{{ baseURL }}/thread/{{ thread.id }}/">{{ thread.replyCount }} Comments</a></div>
       {% endif %}
     </li>
   {% endfor %}
