slightly modified configuration.

--- a/sitetemplates/_footer.html
+++ b/sitetemplates/_footer.html
@@ -1,2 +1,3 @@
-<br/>
+<br/><br/>
+<small>Powered by <a href="http://sct.sphene.net/">Sphene Community Tools</a></small>
 <!-- STATS: Total: %(totTime).2f Python: %(pyTime).2f DB: %(dbTime).2f Queries: %(queries)d -->
