--- a/sitetemplates/base.html
+++ b/sitetemplates/base.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <link rel="stylesheet" href="/static/style.css" />
-  <title>{% if group and group.longname %}{{ group.longname }}{% else %}GOIM Community{% endif %}{% if sph.subtitle %} | {{ sph.subtitle }}{% endif %}</title>
+  <title>{% if group and group.longname %}{{ group.longname }}{% else %}SCT{% endif %}{% if sph.subtitle %} | {{ sph.subtitle }}{% endif %}</title>
   {% block head %}{% endblock %}
   {% include "_head.html" %}
 </head>
@@ -12,7 +12,7 @@
 <body>
   <div id="top">
     {% block top %}
-      <h1>{% if group and group.longname %}{{ group.longname }}{% else %}SpaceCombat 2{% endif %}</h1>
+      <h1>{% if group and group.longname %}{{ group.longname }}{% else %}SCT{% endif %}</h1>
       <h2>Community</h2>
     {% endblock %}
   </div>
