--- a/sitetemplates/base_root.html
+++ b/sitetemplates/base_root.html
@@ -4,6 +4,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <link rel="stylesheet" href="/static/style.css" />
+  {% for jsinclude in sph_settings.community_jsincludes %}
+    <script type="text/javascript" src="{{ jsinclude }}"></script>
+  {% endfor %}
   <title>{% if group and group.longname %}{{ group.longname }}{% else %}SCT{% endif %}{% if sph.subtitle %} | {{ sph.subtitle }}{% endif %}</title>
   {% block head %}{% endblock %}
   {% include "_head.html" %}
@@ -52,6 +55,9 @@
         <a href="{% sph_url 'sphene.community.views.register' %}">Register</a><br/>
       {% endif %}
     </div>
+    {% if sph_perms.community_manage_roles %}
+      <a href="{% sph_url 'community_admin_permission_role_list' %}">Manage Roles</a><br/>
+    {% endif %}
     {% if sph.toc %}
       <div id="toc">
         {{ sph.toc }}
