--- a/sitetemplates/base_root.html
+++ b/sitetemplates/base_root.html
@@ -3,7 +3,9 @@
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+  {% block stylesheets %}
   <link rel="stylesheet" href="/static/style.css" />
+  {% endblock %}
   {% for jsinclude in sph_settings.community_jsincludes %}
     <script type="text/javascript" src="{{ jsinclude }}"></script>
   {% endfor %}
@@ -13,6 +15,7 @@
 </head>
 
 <body>
+{% block body %}
   <div id="top">
     {% block top %}
       <h1>{% if group and group.longname %}{{ group.longname }}{% else %}SCT{% endif %}</h1>
@@ -85,10 +88,14 @@
 
 {% endblock %}
   </div>
+{% endblock %}
 
 {% block footer %}
 
 {% endblock %}
+{% block includefooter %}
+<br/><br/>
 {% include "_footer.html" %}
+{% endblock %}
 </body>
 </html>
