--- a/community/sitetemplates/base_root.html
+++ b/community/sitetemplates/base_root.html
@@ -70,13 +70,13 @@
     <div id="userblock">
       {% if user.is_authenticated %}
       <p>
-        You are logged in as {% sph_html_user user %}<br/>
-        <a href="{% sph_url 'sphene.community.views.profile_edit_mine' %}">Edit Profile</a><br/><br/>
-        <a href="{% sph_url 'sphene.community.views.accounts_logout' %}">Logout</a>
+        {% blocktrans with user|sph_html_user as user %}You are logged in as {{ user }}{% endblocktrans %}<br/>
+        <a href="{% sph_url 'sphene.community.views.profile_edit_mine' %}">{% trans "Edit Profile" %}</a><br/><br/>
+        <a href="{% sph_url 'sphene.community.views.accounts_logout' %}">{% trans "Logout" %}</a>
       {% else %}
         {% trans "You are not logged in." %}<br/>
-        <a href="{% sph_url 'sphene.community.views.accounts_login' %}{% if not sph.is_logout %}?next={{ request.path|urlencode }}{% endif %}">Login</a><br/>
-        <a href="{% sph_url 'sphene.community.views.register' %}">Register</a><br/>
+        <a href="{% sph_url 'sphene.community.views.accounts_login' %}{% if not sph.is_logout %}?next={{ request.path|urlencode }}{% endif %}">{% trans "Login" %}</a><br/>
+        <a href="{% sph_url 'sphene.community.views.register' %}">{% trans "Register" %}</a><br/>
       {% endif %}
       </p>
       {% if sph_settings.community_show_languageswitcher %}
@@ -98,7 +98,9 @@
       {% endif %}
     </div>
     {% if sph_perms.community_manage_roles %}
-      <a href="{% sph_url 'community_admin_permission_role_list' %}">Manage Roles</a><br/>
+    <p>
+      <a href="{% sph_url 'community_admin_permission_role_list' %}">{% trans "Manage Roles" %}</a>
+    </p>
     {% endif %}
     {% if sph.toc %}
       <div id="toc">
