added styleincludes to template.

--- a/community/sitetemplates/base_root.html
+++ b/community/sitetemplates/base_root.html
@@ -10,6 +10,9 @@
   {% for jsinclude in sph_settings.community_jsincludes %}
     <script type="text/javascript" src="{{ jsinclude }}"></script>
   {% endfor %}
+  {% for styleinclude in sph_settings.community_styleincludes %}
+    <link rel="stylesheet" href="{{ styleinclude }}" />
+  {% endfor %}
   <title>{% block title %}{% spaceless %}
     {% if group %}
       {% if group.longname %}
