--- a/community/sitetemplates/base_root.html
+++ b/community/sitetemplates/base_root.html
@@ -45,7 +45,7 @@
     {% endblock %}
   </div>
   {# Feel free to modify the copyright for your website. - Although i would appreciate the notice at the bottom about 'Powered by Sphene Community Tools' with a link to sct.sphene.net. (in _footer.html) #}
-  <div id="subhead">Copyright &copy; 2007 by <a href="http://herbert.poul.at" style="color: #fff; font-weight: bold;">Herbert Poul</a></div>
+  <div id="subhead">Copyright &copy; 2007-2008 by <a href="http://herbert.poul.at" style="color: #fff; font-weight: bold;">Herbert Poul</a></div>
   <div id="leftblah">
     <div id="navigation">
       {% block navigation %}
