use HTML 5 doctype, introduced 'endhad' block.

--- a/community/sitetemplates/base_root.html
+++ b/community/sitetemplates/base_root.html
@@ -1,8 +1,7 @@
 {% load sph_extras %}
 {% load i18n %}
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="de">
 <head>
 
 
@@ -38,7 +37,7 @@
       <script type="text/javascript" src="{{ jsinclude }}"></script>
     {% endfor %}
   {% endblock %}
-
+  {% block endhead %}{% endblock %}
 
 </head>
 
