working on porting to python3 / django 2

--- a/community/sitetemplates/_footer.html
+++ b/community/sitetemplates/_footer.html
@@ -1,6 +1,6 @@
 {# I would appreciate if you could put a similar notice on your website pointing to http://sct.sphene.net - Thank you. #}
 <div id="poweredby">
-<a href="http://sct.sphene.net/"><img src="{{ MEDIA_URL }}sphene/community/logo/sct-powered-124x25.png" border="0" alt="Powered by Sphene Community Tools" title="Powered by Sphene Community Tools" width="124px" height="25px" /></a>
+<a href="http://sct.sphene.net/"><img src="{{ STATIC_URL }}sphene/community/logo/sct-powered-124x25.png" border="0" alt="Powered by Sphene Community Tools" title="Powered by Sphene Community Tools" width="124px" height="25px" /></a>
 </div>
 {% comment %}
  or feel free to use a simple text link like:
