--- a/community/sitetemplates/base_root.html
+++ b/community/sitetemplates/base_root.html
@@ -25,7 +25,7 @@
   {% endspaceless %}{% endblock %}</title>
 
   {% block stylesheets %}
-  <link rel="stylesheet" href="/static/style.css" />
+  <link rel="stylesheet" href="{{ STATIC_URL }}style.css" />
   {% endblock %}
   {% for styleinclude in sph_settings.community_styleincludes %}
     <link rel="stylesheet" href="{{ styleinclude }}" />
@@ -83,13 +83,13 @@
         <a href="{% sph_url 'sphene.community.views.accounts_logout' %}">{% trans "Logout" %}</a>
       {% else %}
         {% trans "You are not logged in." %}<br/>
-        <a href="{% sph_url 'sphene.community.views.accounts_login' %}{% if not sph.is_logout %}?next={{ request.path|urlencode }}{% endif %}">{% trans "Login" %}</a><br/>
-        <a href="{% sph_url 'sphene.community.views.register' %}">{% trans "Register" %}</a><br/>
+        <a href="{% sph_url 'accounts_login' %}{% if not sph.is_logout %}?next={{ request.path|urlencode }}{% endif %}">{% trans "Login" %}</a><br/>
+        <a href="{% sph_url 'sph_register' %}">{% trans "Register" %}</a><br/>
       {% endif %}
       </p>
       {% if sph_settings.community_show_languageswitcher %}
       <div class="languageswitcher">
-      <form action="{% sph_url2 django.views.i18n.set_language %}" method="post">
+      <form action="{% sph_url2 'set_language' %}" method="post">
 	<!--p class="languageswitcher_link">
 	  <a href="#" onclick="javascript:$('.languageswitcher_link').hide(); $('.languageswitcher_form').show(); return false;">{% trans "Change Language" %}</a>
 	</p-->
@@ -121,7 +121,7 @@
     {% include "_below_navigation.html" %}
   </div>
   {% block precontent %}
-    
+
   {% endblock %}
   <div id="content">
 {% if messages %}
